cabal-version:      2.4
name:               SocketChat
version:            0.1.0.0
author:             Isaac Van Doren
maintainer:         69181572+isaacvando@users.noreply.github.com
extra-source-files:
    README.md

executable Client
    main-is:          Client.hs
    build-depends:    base ^>=4.16.4.0
    hs-source-dirs:   .
    default-language: Haskell2010

executable Server
    main-is:          Server.hs
    build-depends:    base ^>=4.16.4.0
    hs-source-dirs:   .
    default-language: Haskell2010
