cabal-version:      2.4
name:               SocketChat
version:            0.1.0.0
author:             Isaac Van Doren
maintainer:         69181572+isaacvando@users.noreply.github.com
extra-source-files:
    README.md

common shared
    default-language: Haskell2010
    ghc-options:
        -Weverything
        -Wno-unused-packages
        -Wno-missing-local-signatures
        -Wno-all-missed-specialisations
        -Wno-incomplete-uni-patterns
        -Wno-prepositive-qualified-module
        -Wno-compat-unqualified-imports
        -Wno-safe
        -Wno-implicit-prelude
        -Wno-missing-safe-haskell-mode
        --networking is unsafe
        -Wno-unsafe
    build-depends: base ^>=4.16.4.0, network, split, bytestring, utf8-string
    hs-source-dirs: .
    default-extensions: OverloadedStrings

executable Client
    import: shared
    main-is: Client.hs

executable Server
    import: shared
    main-is: Server.hs
